@@ -1,21 +1,18 @@
-//Copyright 2024 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+//Copyright 2025 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 
 package com.picimako.terra.wdio;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.List;
-
 import com.intellij.openapi.vfs.VfsUtil;
-import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.testFramework.LightProjectDescriptor;
-import com.intellij.testFramework.fixtures.BasePlatformTestCase;
+
+import com.picimako.terra.TerraSupportTestBase;
 
 /**
  * Unit test for {@link SpecFolderCollector}.
  */
-public class TerraFunctionalTestingSpecFolderCollectorTest extends BasePlatformTestCase {
+public class TerraFunctionalTestingSpecFolderCollectorTest extends TerraSupportTestBase {
 
     @Override
     protected String getTestDataPath() {
@@ -23,13 +20,14 @@ public class TerraFunctionalTestingSpecFolderCollectorTest extends BasePlatformT
     }
 
     public void testCollectSpecFolders() {
-        myFixture.copyFileToProject("package.json");
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/latest/clinical-lowlight-theme/en/chrome_huge/CollectScreenshots-spec/terra_screenshot.png");
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/reference/clinical-lowlight-theme/en/chrome_medium/CollectScreenshots-spec/terra_screenshot.png");
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/reference/terra-default-theme/en/chrome_huge/FindUnusedScreenshot-spec/terra_screenshot.png");
+        copyFilesToProject(
+            "package.json",
+            "tests/wdio/__snapshots__/latest/clinical-lowlight-theme/en/chrome_huge/CollectScreenshots-spec/terra_screenshot.png",
+            "tests/wdio/__snapshots__/reference/clinical-lowlight-theme/en/chrome_medium/CollectScreenshots-spec/terra_screenshot.png",
+            "tests/wdio/__snapshots__/reference/terra-default-theme/en/chrome_huge/FindUnusedScreenshot-spec/terra_screenshot.png");
 
-        List<VirtualFile> filesAndFoldersInWdioRoot = VfsUtil.collectChildrenRecursively(TerraWdioFolders.projectWdioRoot(getProject()));
-        List<VirtualFile> latests = TerraResourceManager.getInstance(getProject()).specFolderCollector().collectSpecFoldersForTypeInside("latest", filesAndFoldersInWdioRoot).collect(toList());
+        var filesAndFoldersInWdioRoot = VfsUtil.collectChildrenRecursively(TerraWdioFolders.projectWdioRoot(getProject()));
+        var latests = TerraResourceManager.getInstance(getProject()).specFolderCollector().collectSpecFoldersForTypeInside("latest", filesAndFoldersInWdioRoot).toList();
 
         assertThat(latests).hasSize(1);
         assertThat(latests.getFirst().getPath()).isEqualTo("/src/tests/wdio/__snapshots__/latest/clinical-lowlight-theme/en/chrome_huge/CollectScreenshots-spec");
