@@ -1,30 +1,27 @@
-//Copyright 2024 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+//Copyright 2025 Tamás Balog. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 
 package com.picimako.terra.wdio;
 
 import static com.picimako.terra.wdio.ScreenshotTypeHelper.reference;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
 
 import com.intellij.openapi.project.ProjectUtil;
 import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.psi.PsiDirectory;
 import com.intellij.psi.PsiFile;
 import com.intellij.psi.PsiManager;
 import com.intellij.psi.search.FilenameIndex;
 import com.intellij.psi.search.GlobalSearchScope;
-import com.intellij.testFramework.fixtures.BasePlatformTestCase;
 import org.assertj.core.api.SoftAssertions;
+
+import com.picimako.terra.TerraSupportTestBase;
 
 /**
  * Unit test for {@link TerraWdioFolders}.
  */
-public class TerraWdioFoldersTest extends BasePlatformTestCase {
+public class TerraWdioFoldersTest extends TerraSupportTestBase {
 
     @Override
     protected String getTestDataPath() {
@@ -34,9 +31,9 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // projectWdioRoot
 
     public void testReturnVirtualFileForProjectWdioRoot() {
-        myFixture.copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
+        copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
 
-        VirtualFile wdioRoot = TerraWdioFolders.projectWdioRoot(getProject());
+        var wdioRoot = TerraWdioFolders.projectWdioRoot(getProject());
 
         runAssertions(wdioRoot, "/tests/wdio");
     }
@@ -48,7 +45,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // getTestRoot
 
     public void testReturnTestRootDirectory() {
-        myFixture.copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
+        copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
 
         assertThat(TerraWdioFolders.getTestRoot(getProject(), "wdio")).isNotNull();
     }
@@ -60,7 +57,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // wdioRootRelativePath
 
     public void testReturnWdioRootRelativePath() {
-        myFixture.copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
+        copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
 
         assertThat(TerraWdioFolders.wdioRootRelativePath(getProject())).isEqualTo("tests/wdio");
     }
@@ -68,7 +65,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // getRelativePathToProjectDir
 
     public void testReturnRelativePath() {
-        myFixture.copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
+        copyFileToProject("tests/wdio/CollectScreenshots-spec.js");
 
         assertThat(TerraWdioFolders.getRelativePathToProjectDir(getProject(), TerraWdioFolders.projectWdioRoot(getProject()))).isEqualTo("tests/wdio");
     }
@@ -76,12 +73,13 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // collectSpecFiles
 
     public void testCollectSpecFilesFromAll() {
-        myFixture.copyFileToProject("tests/wdio/FindUnusedScreenshot-spec.js");
-        myFixture.copyFileToProject("tests/wdio/nested/anEmpty-spec.js");
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
+        copyFilesToProject(
+            "tests/wdio/FindUnusedScreenshot-spec.js",
+            "tests/wdio/nested/anEmpty-spec.js",
+            "tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
 
-        List<VirtualFile> filesAndFoldersInWdioRoot = VfsUtil.collectChildrenRecursively(TerraWdioFolders.projectWdioRoot(getProject()));
-        Set<VirtualFile> specFiles = TerraWdioFolders.collectSpecFiles(filesAndFoldersInWdioRoot);
+        var filesAndFoldersInWdioRoot = VfsUtil.collectChildrenRecursively(TerraWdioFolders.projectWdioRoot(getProject()));
+        var specFiles = TerraWdioFolders.collectSpecFiles(filesAndFoldersInWdioRoot);
 
         assertThat(specFiles).hasSize(2);
         assertThat(specFiles.iterator().next().getPath()).matches("/src/tests/wdio/(FindUnusedScreenshot-spec.js|nested/anEmpty-spec.js)");
@@ -91,17 +89,18 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // diffImageForLatest
 
     public void testGetDiffImageForLatestImage() {
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/diff/en/chrome_huge/some-spec/testimage[default].png");
-        VirtualFile wdioRoot = TerraWdioFolders.projectWdioRoot(getProject());
+        copyFilesToProject(
+            "tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png",
+            "tests/wdio/__snapshots__/diff/en/chrome_huge/some-spec/testimage[default].png");
+        var wdioRoot = TerraWdioFolders.projectWdioRoot(getProject());
         TerraWdioFolders.setWdioTestRootPath(wdioRoot.getPath());
-        VirtualFile latest = FilenameIndex.getVirtualFilesByName("testimage[default].png", GlobalSearchScope.projectScope(getProject()))
+        var latest = FilenameIndex.getVirtualFilesByName("testimage[default].png", GlobalSearchScope.projectScope(getProject()))
             .stream()
             .filter(image -> image.getPath().endsWith("latest/en/chrome_huge/some-spec/testimage[default].png"))
             .findFirst()
             .get();
 
-        VirtualFile diffImage = TerraWdioFolders.diffImageForLatest(getProject(), latest);
+        var diffImage = TerraWdioFolders.diffImageForLatest(getProject(), latest);
 
         runAssertions(diffImage, "/diff/en/chrome_huge/some-spec/testimage[default].png");
     }
@@ -109,17 +108,18 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // latestImageForReference
 
     public void testGetLatestImageForReferenceImage() {
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
-        VirtualFile wdioRoot = TerraWdioFolders.projectWdioRoot(getProject());
+        copyFilesToProject(
+            "tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png",
+            "tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
+        var wdioRoot = TerraWdioFolders.projectWdioRoot(getProject());
         TerraWdioFolders.setWdioTestRootPath(wdioRoot.getPath());
-        VirtualFile latest = FilenameIndex.getVirtualFilesByName("testimage[default].png", GlobalSearchScope.projectScope(getProject()))
+        var latest = FilenameIndex.getVirtualFilesByName("testimage[default].png", GlobalSearchScope.projectScope(getProject()))
             .stream()
             .filter(image -> image.getPath().endsWith("reference/en/chrome_huge/some-spec/testimage[default].png"))
             .findFirst()
             .get();
 
-        VirtualFile latestImage = TerraWdioFolders.latestImageForReference(getProject(), latest);
+        var latestImage = TerraWdioFolders.latestImageForReference(getProject(), latest);
 
         runAssertions(latestImage, "/latest/en/chrome_huge/some-spec/testimage[default].png");
     }
@@ -127,7 +127,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // specFolderIdentifier
 
     public void testSpecFolderIdentifierFolderNoNestedFolder() {
-        VirtualFile parent = myFixture.copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png").getParent();
+        var parent = copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png").getParent();
 
         String id = TerraWdioFolders.specFolderIdentifier(parent, getProject());
 
@@ -135,7 +135,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     }
 
     public void testSpecFolderIdentifierFolderOneLevelNestedFolder() {
-        VirtualFile parent = myFixture.copyFileToProject("tests/wdio/nested/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png").getParent();
+        var parent = copyFileToProject("tests/wdio/nested/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png").getParent();
 
         String id = TerraWdioFolders.specFolderIdentifier(parent, getProject());
 
@@ -143,7 +143,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     }
 
     public void testSpecFolderIdentifierFolderTwoLevelNestedFolder() {
-        VirtualFile parent = myFixture.copyFileToProject("tests/wdio/nested/folder/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png").getParent();
+        var parent = copyFileToProject("tests/wdio/nested/folder/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png").getParent();
 
         String id = TerraWdioFolders.specFolderIdentifier(parent, getProject());
 
@@ -153,7 +153,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // specFileIdentifier
 
     public void testSpecFileIdentifierFolderNoNestedFolder() {
-        VirtualFile specFile = myFixture.copyFileToProject("tests/wdio/FindUnusedScreenshot-spec.js");
+        var specFile = copyFileToProject("tests/wdio/FindUnusedScreenshot-spec.js");
 
         String id = TerraWdioFolders.specFileIdentifier(specFile, getProject());
 
@@ -161,7 +161,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     }
 
     public void testSpecFileIdentifierFolderOneLevelNestedFolder() {
-        VirtualFile specFile = myFixture.copyFileToProject("tests/wdio/nested/anEmpty-spec.js");
+        var specFile = copyFileToProject("tests/wdio/nested/anEmpty-spec.js");
 
         String id = TerraWdioFolders.specFileIdentifier(specFile, getProject());
 
@@ -171,19 +171,19 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // isInWdioFiles
 
     public void testInWdioFilesDirectly() {
-        VirtualFile specFile = myFixture.copyFileToProject("tests/wdio/MissingScreenshots-spec.js");
+        var specFile = copyFileToProject("tests/wdio/MissingScreenshots-spec.js");
 
         assertThat(TerraWdioFolders.isInWdioFiles(specFile, getProject())).isTrue();
     }
 
     public void testInWdioFilesIndirectly() {
-        VirtualFile screenshot = myFixture.copyFileToProject("tests/wdio/nested/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
+        var screenshot = copyFileToProject("tests/wdio/nested/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
 
         assertThat(TerraWdioFolders.isInWdioFiles(screenshot, getProject())).isTrue();
     }
 
     public void testNotInWdioFiles() {
-        VirtualFile wdioConf = myFixture.copyFileToProject("wdio.conf.js");
+        var wdioConf = copyFileToProject("wdio.conf.js");
 
         assertThat(TerraWdioFolders.isInWdioFiles(wdioConf, getProject())).isFalse();
     }
@@ -195,7 +195,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     //isInSnapshotsDirectory
 
     public void testInSnapshots() {
-        VirtualFile screenshot = myFixture.copyFileToProject(reference("/en/chrome_huge/NavigateToScreenshotUsage-spec/terra_screenshot[default].png"));
+        var screenshot = copyFileToProject(reference("/en/chrome_huge/NavigateToScreenshotUsage-spec/terra_screenshot[default].png"));
 
         assertThat(TerraWdioFolders.isInSnapshotsDirectory(screenshot)).isTrue();
     }
@@ -205,7 +205,7 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     }
 
     public void testNotInSnapshots() {
-        VirtualFile wdioConf = myFixture.copyFileToProject("wdio.conf.js");
+        var wdioConf = copyFileToProject("wdio.conf.js");
 
         assertThat(TerraWdioFolders.isInSnapshotsDirectory(wdioConf)).isFalse();
     }
@@ -213,19 +213,21 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     //collectSpecFiles
 
     public void testCollectSpecFiles() {
-        myFixture.copyFileToProject("tests/wdio/nameResolution/resolveName-spec.js");
-        myFixture.copyFileToProject("tests/wdio/nameResolution/resolveNameNoParentDescribe-spec.js");
-        myFixture.copyFileToProject("tests/wdio/nameResolution/resolveNameNoParentDescribeName-spec.js");
-        myFixture.copyFileToProject("tests/wdio/nested/anEmpty-spec.js");
-        myFixture.copyFileToProject("tests/wdio/nested/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
+        copyFilesToProject(
+            "tests/wdio/nameResolution/resolveName-spec.js",
+            "tests/wdio/nameResolution/resolveNameNoParentDescribe-spec.js",
+            "tests/wdio/nameResolution/resolveNameNoParentDescribeName-spec.js",
+            "tests/wdio/nested/anEmpty-spec.js",
+            "tests/wdio/nested/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
 
-        List<PsiFile> specFiles = new ArrayList<>();
-        PsiDirectory projectRoot = PsiManager.getInstance(getProject()).findDirectory(ProjectUtil.guessProjectDir(getProject()));
+        var specFiles = new ArrayList<PsiFile>();
+        var projectRoot = PsiManager.getInstance(getProject()).findDirectory(ProjectUtil.guessProjectDir(getProject()));
         TerraWdioFolders.collectSpecFiles(projectRoot, specFiles);
 
-        List<String> specFilePaths = specFiles.stream().map(file -> file.getVirtualFile().getPath()).collect(toList());
+        var specFilePaths = specFiles.stream().map(file -> file.getVirtualFile().getPath()).toList();
 
-        assertThat(specFilePaths).containsExactlyInAnyOrder("/src/tests/wdio/nameResolution/resolveName-spec.js",
+        assertThat(specFilePaths).containsExactlyInAnyOrder(
+            "/src/tests/wdio/nameResolution/resolveName-spec.js",
             "/src/tests/wdio/nameResolution/resolveNameNoParentDescribe-spec.js",
             "/src/tests/wdio/nameResolution/resolveNameNoParentDescribeName-spec.js",
             "/src/tests/wdio/nested/anEmpty-spec.js");
@@ -234,15 +236,15 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     //isSnapshotsDirectory
 
     public void testIsSnapshotDirectory() {
-        myFixture.copyFileToProject("tests/wdio/__snapshots__/diff/en/chrome_huge/some-spec/testimage[default].png");
-        PsiDirectory snapshots = PsiManager.getInstance(getProject())
+        copyFileToProject("tests/wdio/__snapshots__/diff/en/chrome_huge/some-spec/testimage[default].png");
+        var snapshots = PsiManager.getInstance(getProject())
             .findDirectory(TerraWdioFolders.projectWdioRoot(getProject()).findChild("__snapshots__"));
 
         assertThat(TerraWdioFolders.isSnapshotsDirectory(snapshots)).isTrue();
     }
 
     public void testIsNotSnapshotDirectory() {
-        PsiDirectory projectRoot = PsiManager.getInstance(getProject()).findDirectory(ProjectUtil.guessProjectDir(getProject()));
+        var projectRoot = PsiManager.getInstance(getProject()).findDirectory(ProjectUtil.guessProjectDir(getProject()));
 
         assertThat(TerraWdioFolders.isSnapshotsDirectory(projectRoot)).isFalse();
     }
@@ -250,19 +252,19 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // isDiffScreenshot
 
     public void testIsDiffScreenshot() {
-        VirtualFile screenshot = myFixture.copyFileToProject("tests/wdio/__snapshots__/diff/en/chrome_huge/some-spec/testimage[default].png");
+        var screenshot = copyFileToProject("tests/wdio/__snapshots__/diff/en/chrome_huge/some-spec/testimage[default].png");
 
         assertThat(TerraWdioFolders.isDiffScreenshot(screenshot, getProject())).isTrue();
     }
 
     public void testIsNotDiffScreenshotNotInWdioFiles() {
-        VirtualFile wdioConf = myFixture.copyFileToProject("wdio.conf.js");
+        var wdioConf = copyFileToProject("wdio.conf.js");
 
         assertThat(TerraWdioFolders.isDiffScreenshot(wdioConf, getProject())).isFalse();
     }
 
     public void testIsNotDiffScreenshot() {
-        VirtualFile screenshot = myFixture.copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
+        var screenshot = copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
 
         assertThat(TerraWdioFolders.isDiffScreenshot(screenshot, getProject())).isFalse();
     }
@@ -270,19 +272,19 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // isLatestScreenshot
 
     public void testIsLatestScreenshot() {
-        VirtualFile screenshot = myFixture.copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
+        var screenshot = copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
 
         assertThat(TerraWdioFolders.isLatestScreenshot(screenshot, getProject())).isTrue();
     }
 
     public void testIsNotLatestScreenshotNotInWdioFiles() {
-        VirtualFile wdioConf = myFixture.copyFileToProject("wdio.conf.js");
+        var wdioConf = copyFileToProject("wdio.conf.js");
 
         assertThat(TerraWdioFolders.isLatestScreenshot(wdioConf, getProject())).isFalse();
     }
 
     public void testIsNotLatestScreenshot() {
-        VirtualFile screenshot = myFixture.copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
+        var screenshot = copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
 
         assertThat(TerraWdioFolders.isLatestScreenshot(screenshot, getProject())).isFalse();
     }
@@ -290,19 +292,19 @@ public class TerraWdioFoldersTest extends BasePlatformTestCase {
     // isReferenceScreenshot
 
     public void testIsReferenceScreenshot() {
-        VirtualFile screenshot = myFixture.copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
+        var screenshot = copyFileToProject("tests/wdio/__snapshots__/reference/en/chrome_huge/some-spec/testimage[default].png");
 
         assertThat(TerraWdioFolders.isReferenceScreenshot(screenshot, getProject())).isTrue();
     }
 
     public void testIsNotReferenceScreenshotNotInWdioFiles() {
-        VirtualFile wdioConf = myFixture.copyFileToProject("wdio.conf.js");
+        var wdioConf = copyFileToProject("wdio.conf.js");
 
         assertThat(TerraWdioFolders.isReferenceScreenshot(wdioConf, getProject())).isFalse();
     }
 
     public void testIsNotReferenceScreenshot() {
-        VirtualFile screenshot = myFixture.copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
+        var screenshot = copyFileToProject("tests/wdio/__snapshots__/latest/en/chrome_huge/some-spec/testimage[default].png");
 
         assertThat(TerraWdioFolders.isReferenceScreenshot(screenshot, getProject())).isFalse();
     }
